verificar pq babel -w n funciona

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@babel/preset-env": "^7.4.5"
   },
   "scripts": {
-    "dev": "babel ./main.js -o ./bundle.js"
+    "dev": "babel ./main.js -o ./bundle.js",
+    "test": "babel ./main.js -o ./bundle.js -w"
   }
 }
