--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,21 +1,23 @@
 {
-    "env": {
-        "browser": true,
-        "es6": true
-    },
-    "extends": "airbnb-base",
-    "globals": {
-        "Atomics": "readonly",
-        "SharedArrayBuffer": "readonly"
-    },
-    "parserOptions": {
-        "ecmaVersion": 2018,
-        "sourceType": "module"
-    },
-    "rules": {
-        "no-console": "off",
-        "no-alert": "off",
-        "ignoreComments": true,
-        "ignoreUrls": true
-    }
+  "env": {
+    "browser": true,
+    "es6": true
+  },
+  "extends": "airbnb-base",
+  "globals": {
+    "Atomics": "readonly",
+    "SharedArrayBuffer": "readonly"
+  },
+  "parserOptions": {
+    "ecmaVersion": 2018,
+    "sourceType": "module"
+  },
+  "rules": {
+    "no-console": "off",
+    "no-alert": "off",
+    "camelcase": "off",
+    "no-new": "off",
+    "ignoreComments": true,
+    "ignoreUrls": true
+  }
 }
